lab1/Test/L1-A-13-39.output
Error Type B at Line 2
Error Type A at Line 7
Error Type B at Line 12
Error Type B at Line 17
Error Type B at Line 20
Error Type B at Line 21
Error Type B at Line 37
