lab1/Test/L1-A-13-39.cmm
struct vT52S5Q3uDcMcN ;
. float pMVj1WwHYum [ 781548818 ] 
;
int ;
struct GLgjL0l_P {
  struct {
  }w6 , JX ^;
  int Z6_9WQ8HvoHQ2wEwuFT = JR10F8bxHlFVSQP4b = g 
    && YbaqL0IFvs3m1 * - Azxm4ANhEb ( A6qXj , dEIFff81EL 
    || RW4txq8b9PbC <= oRZj9bnegczQkgHk + XKIxMDw7at_D7qCUpC 
    [ tEDgrIf_gpFczy_U7Atx = pqm3 > ( HRAYbHIe = o == 
    ANaqwU_ / ( LIlicPwzOnp86bQDo = || JOcbWqjXV5BbeJySW3hw 
    != v [ LcmpXw78ZNXnqS2hvNf >= r ] ) * XD0a5jQewPno 
    < - ! - 447594355 * 209195674.1132943746 . XM1fl8jh8c 
    ) ] - - YqWo26JL ) / ! AThhZXbO2ozLx0 ( ) . xjeqOhjIHcQ 
    ;
}GQBnEcYX ( int FK0zNIYMYj , int ) {
}
int O6GBxGYuns ( ) {
  if ( JqEli37Ch0 )   if ( vx   while ( K3K3ng )   if 
    767204712.1350009909 ( B2ZzxE38_7a )   gme6ulQWGf0B 
    ;
else   FfV9o4Lnau ;


else   if ( BLdsH ) {
  }


  return ILbeC9yypl ;
}
int ;
int WI6LR , Al4z3NmkGkgfcA9NOX 

;
int ;
else 